--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -45,6 +45,7 @@ body
 	+lregular
 	font-size: 14px
 	line-height: 1.4
+	color: #4f575c
 	+font-smoothing
 	min-width: 960px
 
@@ -693,23 +694,31 @@ a
 	margin-bottom: 30px
 	font-size: 0
 	li
-		position: relative
-		display: inline-block
-		+lbold
-		color: #4f575c
+		display: inline
 		font-size: 12px
-		padding-left: 15px
+		color: #4f575c
+		+lbold
+		&:first-child
+			a
+				padding-left: 0
+				&:before
+					content: none
+	a
+		// position: relative
+		// display: inline-block
+		// font-size: 12px
+		color: #267dc1
+	span, a
+		position: relative
+		padding-left: 7px
+		padding-right: 7px
 		&:before
-			position: absolute
-			top: 50%
-			margin-top: -3px
-			left: 6px
+			position: relative
+			display: inline-block
+			top: -1px
+			left: -6px
 			+s(bc_arr)
 			content: ""
-		&:first-child
-			padding-left: 0
-			&:before
-				content: none
 
 .h1
 	+lblack
@@ -1045,5 +1054,129 @@ a
 	.catrow__btn
 		width: 141px
 	.catrow__click
+
+.product
+	.h1
+		text-transform: none
+		font-size: 32px
+		line-height: 1
+		margin-bottom: 15px
+	.product__info
+		+clr
+		margin-bottom: 20px
+	.product__meta
+		float: left
+		width: 340px
+		margin-right: 20px
+		min-height: 1px
+	.product__price
+		+lblack
+		margin-bottom: 25px
+	.product__price-old
+		font-size: 24px
+		text-decoration: line-through
+	.product__price-current
+		font-size: 44px
+		color: #117ac0
+	.product__action
+		.btn-primary
+			display: block
+			width: 100%
+			font-size: 18px
+			color: #fff
+			padding: 21px 0
+			margin-bottom: 20px
+	.product__action-sep
+		+lbold
+		display: inline-block
+		vertical-align: middle
+		// margin-left: 10px
+	.product__btn-click
+		width: 181px
+		// text-transform: none
+		margin-left: 10px
+	.product__descr
+		overflow: hidden
+		p
+			margin-bottom: 25px
+			line-height: 22px
+			// a
+				// +litalic
+		h3
+			margin-top: 25px
+			+lblack
+			font-size: 14px
+		blockquote
+			+border-radius(5px)
+			background-color: #f0f0f5
+			padding: 20px
+
+.comments
+	margin-bottom: 30px
+	.comments__title
+		font-size: 24px
+		+lbold
+		color: #117ac0
+.comment
+	+clr
+	padding: 35px 0
+	position: relative
+	border-top: 1px solid #e4eae5
+	&:before
+		position: absolute
+		top: 68px
+		left: 116px
+		+s(tr)
+		content: ""
+	&:first-child
+		border: none
+.comment__userpic
+	float: left
+	width: 97px
+	height: 97px
+	+border-radius(50%)
+	overflow: hidden
+	margin-right: 27px
+	img
+		display: block
+		min-height: 97px
+		max-width: 97px
+.comment__info
+	overflow: hidden
+	// margin-left: 27px
+	padding-left: 24px
+	position: relative
+	color: #636c71
+	font-size: 14px
+	line-height: 22px
+	&:before
+		position: absolute
+		top: 0
+		bottom: 0
+		left: 0
+		width: 4px
+		background: #e4eae5
+		content: ""
+.comment__meta
+	+clr
+	margin-bottom: 10px
+.comment__rate
+	margin-bottom: 5px
+.comment__userinfo
+	float: left
+	+lheavy
+.comment__date
+	float: right
+	color: #acacac
+.comment__text
+
+
+
+
+
+
+
+
+
 
 
